--- a/src/main/webapp/WEB-INF/view/authorization/resetPassword.html
+++ b/src/main/webapp/WEB-INF/view/authorization/resetPassword.html
@@ -15,9 +15,13 @@
   <link rel="icon" type="image/png" sizes="32x32" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
   <link rel="icon" type="image/png" sizes="16x16" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
   <link rel="manifest" th:href="@{/resources/static/img/logo/site.webmanifest}">
+  <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
 </head>
 
 <body>
+<div th:if="${null ne success and success ne true}" th:insert="~{base/toastCustom :: toast}"/>
 <div class="main">
   <div class="frame">
     <div class="left">
@@ -49,14 +53,13 @@
           </div>
           <label for="password">Новый пароль</label>
           <input maxlength="60" placeholder="Введите новый пароль" type="password" id="password" name="password">
-          <img th:unless="${#fields.hasErrors('password')}" th:src="@{/resources/static/img/info.svg}" class="info-logo" alt="">
-          <img th:if="${#fields.hasErrors('password')}" th:src="@{/resources/static/img/info_red.svg}" class="info-logo" alt="">
+          <img th:src="@{/resources/static/img/info.svg}" class="info-logo" alt="">
         </div>
 
         <label for="passwordAgain">Подтвердите пароль</label>
         <input maxlength="60"  placeholder="Введите пароль" id="passwordAgain" type="password" name="passwordAgain">
         <input type="hidden" name="token" id="token" th:value="${token}">
-        <p class="error error1" th:if="${error}">Пароли не совпадают</p>
+        <div style="position: absolute;" id="doPasswordsMatchRespond"></div>
         <div class="flexbox-register-finish" style="margin-top: 200px !important;">
           <input type="submit" value="Подтвердить">
         </div>
@@ -65,5 +68,57 @@
   </div>
 </div>
 <script th:src="@{/resources/static/js/showInfo.js}"></script>
+<script type="text/javascript">
+  // https://stackoverflow.com/questions/1909441/how-to-delay-the-keyup-handler-until-the-user-stops-typing
+  function delay(callback, ms) {
+    let timer = 0;
+    return function() {
+      const context = this, args = arguments;
+      clearTimeout(timer);
+      timer = setTimeout(function () {
+        callback.apply(context, args);
+      }, ms || 0);
+    };
+  }
+  let funcPasswordAgain = (data) => {
+    $("#doPasswordsMatch").remove();
+    let element = `<p style="font-size:12px;margin-left:272px;margin-top: 3px;" id="doPasswordsMatch"> ${data === true ? 'Пароли не совпадают' : 'Пароли совпадают'}</p>`;
+    $("#doPasswordsMatchRespond").append(element);
+    if(data)
+      $("#doPasswordsMatch").css({'color': '#dc3545'});
+    else
+      $("#doPasswordsMatch").css({'color': '#28a745'});
+  }
+  $(document).ready(
+          function() {
+            $("#passwordAgain").bind("keyup",
+                    delay(
+                            function () {
+                              $.ajax({
+                                url: "/auth/ajax/doPasswordsNotMatch",
+                                type: "GET",
+                                data: ({passwordAgain: document.getElementById("passwordAgain").value,password: document.getElementById("password").value}),
+                                success: funcPasswordAgain
+                              });
+                            }
+                            ,700
+                    )
+            );
+            $("#password").bind("keyup",
+                    delay(
+                            function () {
+                              $.ajax({
+                                url: "/auth/ajax/doPasswordsNotMatch",
+                                type: "GET",
+                                data: ({passwordAgain: document.getElementById("passwordAgain").value,password: document.getElementById("password").value}),
+                                success: funcPasswordAgain
+                              });
+                            }
+                            ,700
+                    )
+            );
+          }
+  );
+</script>
 </body>
 </html>
