--- a/src/main/webapp/WEB-INF/view/admin/createUser.html
+++ b/src/main/webapp/WEB-INF/view/admin/createUser.html
@@ -46,10 +46,16 @@
         <div class="main-content-input">
           <label th:for="name">Имя</label>
           <input type="text" th:name="name" th:id="name">
+          <div id="isLoginTakenRespond" style="position: absolute">
+            <p id="respondFromServerLogin"></p>
+          </div>
         </div>
         <div class="main-content-input">
           <label th:for="email">Почта</label>
           <input type="email" th:name="email" th:id="email">
+          <div id="isEmailTakenRespond" style="position: absolute">
+            <p id="respondFromServerEmail"></p>
+          </div>
         </div>
         <div class="main-content-input">
           <label th:for="encryptedPassword">Пароль</label>
@@ -85,4 +91,59 @@
   </div>
 </main>
 </body>
+<script type="text/javascript">
+  // https://stackoverflow.com/questions/1909441/how-to-delay-the-keyup-handler-until-the-user-stops-typing
+  function delay(callback, ms) {
+    let timer = 0;
+    return function() {
+      const context = this, args = arguments;
+      clearTimeout(timer);
+      timer = setTimeout(function () {
+        callback.apply(context, args);
+      }, ms || 0);
+    };
+  }
+  let funcSuccessLogin = (data) => {
+    $("#respondFromServerLogin").remove();
+    let element = `<p style="font-size:12px;margin-left:102px;margin-top: 3px;" id="respondFromServerLogin"> ${data === true ? 'Имя уже занято' : 'Имя свободно'}</p>`;
+    $("#isLoginTakenRespond").append(element);
+    if(data)
+      $("#respondFromServerLogin").css({'color': '#dc3545'});
+    else
+      $("#respondFromServerLogin").css({'color': '#28a745'});
+  }
+  let funcSuccessEmail = (data) => {
+    $("#respondFromServerEmail").remove();
+    let element = `<p style="font-size:12px;margin-left:102px;margin-top: 3px;" id="respondFromServerEmail"> ${data === true ? 'Почта уже занята' : 'Почта свободна'}</p>`;
+    $("#isEmailTakenRespond").append(element);
+    if(data)
+      $("#respondFromServerEmail").css({'color': '#dc3545'});
+    else
+      $("#respondFromServerEmail").css({'color': '#28a745'});
+  }
+  $(document).ready(function() {
+    $("#name").on("keyup",
+    delay(function () {
+      console.log("smth");
+        $.ajax({
+          url: "/auth/ajax/isLoginAlreadyTaken",
+          type: "GET",
+          data: ({login: document.getElementById("name").value}),
+          success: funcSuccessLogin
+        });
+    },700)
+    );
+    $("#email").on("keyup",
+            delay(function () {
+              console.log("smth");
+              $.ajax({
+                url: "/auth/ajax/isEmailAlreadyTaken",
+                type: "GET",
+                data: ({email: document.getElementById("email").value}),
+                success: funcSuccessEmail
+              });
+            },700)
+    );
+  });
+</script>
 </html>
