--- a/src/main/webapp/WEB-INF/view/base/header.html
+++ b/src/main/webapp/WEB-INF/view/base/header.html
@@ -21,11 +21,18 @@
                 </form>
             </div>
             <div class="loggedIn" sec:authorize="isAuthenticated()">
-                    <form th:method="POST" th:action="@{/logout}">
-                        <input type="image" th:src="@{/resources/static/img/user.svg}" class="loggedIn-pic">
 
-                        <input type="image" th:src="@{/resources/static/img/logout.svg}" class="loggedIn-pic">
-                    </form>
+                    <div class="avatar" style="width: 50px;height: 50px;overflow: hidden;border-radius: 50%">
+                        <a th:href="@{/profile}">
+                            <img style="width: 50px;height: 50px" th:id="theAvatar" th:src="@{/resources/static/img/UnsetAvatar.gif}"  alt="Profile">
+                        </a>
+                    </div>
+                <script th:if="${hasAvatar}" th:inline="javascript">
+                    theAvatar = document.getElementById("theAvatar");
+                    let str1 = [[${avatar}]];
+                    let format1 = [[${avatarFormat}]];
+                    theAvatar.setAttribute("src",`data:image/${format1};base64,${str1}`);
+                </script>
             </div>
         </div>
 
